test/libsolidity/syntaxTests/comments/unicode_direction_in_source_2.sol
contract C {
    function f(bool b) public pure
    {
        uint a = 10; ‬
    }
}
// ----
// ParserError 8936: (75-76): Invalid token.
